infra/heaven/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heaven-deployment
  labels:
    app: heaven
spec:
  selector:
    matchLabels:
      app: heaven
  template:
    metadata:
      labels:
        app: heaven
    spec:
      containers:
        - name: heaven
          image: ghcr.io/kofoednielsen/pass-heaven:176 # {"$imagepolicy": "pass:heaven"}
