infra/heaven/service.yml
apiVersion: v1
kind: Service
metadata:
  name: heaven-service
spec:
  selector:
    app: heaven
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
