infra/heaven/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heaven-ingress
spec:
  rules:
  - http:
      paths:
      - path: /heaven
        pathType: Prefix
        backend:
          service:
            name: heaven-service
            port:
              number: 80
